--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@modules/faq": "file:./modules/faq",
     "@modules/login": "file:./modules/login/",
     "@modules/maps": "file:./modules/maps/",
+    "@modules/onboarding": "file:./modules/onboarding/",
     "@react-native-async-storage/async-storage": "1.17.9",
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/native": "^6.1.6",
